# ffmpeg-tools

./: .gitignore  README.md  build_gui.sh  ffmpeg_gui.spec  plan.md  pyproject.toml
.github/workflows/: release.yml
src/ffmpeg_tui/: __init__.py  __main__.py  app.py  config.py
src/ffmpeg_tui/core/: __init__.py  command_builder.py  ffmpeg_executor.py  ffmpeg_manager.py  progress_parser.py
src/ffmpeg_tui/gui/: __init__.py  __main__.py  main_window.py  splash.py  updater.py  worker.py
src/ffmpeg_tui/gui/tabs/: __init__.py  compress_tab.py  convert_tab.py  help_tab.py  meta_tab.py  settings_tab.py
src/ffmpeg_tui/gui/widgets/: __init__.py  file_picker.py  format_selector.py  media_info.py  parameter_panel.py  progress_panel.py
src/ffmpeg_tui/models/: __init__.py  conversion_task.py  ffmpeg_info.py  format_config.py
src/ffmpeg_tui/ui/screens/: __init__.py  compress_screen.py  convert_screen.py  main_screen.py  settings_screen.py
src/ffmpeg_tui/ui/styles/: main.tcss
src/ffmpeg_tui/ui/widgets/: __init__.py  file_picker.py  format_selector.py  parameter_panel.py  progress_display.py
src/ffmpeg_tui/utils/: __init__.py  file_utils.py  logger.py  platform_utils.py  validators.py
