[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-tui-tools"
version = "0.1.0"
description = "A TUI tool for simplifying FFmpeg video/audio conversion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Max Li" }]
keywords = ["ffmpeg", "tui", "video", "audio", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ffmpeg-tui = "ffmpeg_tui.__main__:main"
ffmpeg-gui = "ffmpeg_tui.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
